@@ -1,1 +1,0 @@
-libnvidia-fatbinaryloader.so.#VERSION#		#LIBDIR#/
