@@ -1,18 +1,0 @@
-# The NVIDIA license does not allow any form of modification.
-[i386]: binary-file-built-without-LFS-support
-hardening-no-bindnow
-hardening-no-fortify-functions
-hardening-no-stackprotector
-
-# Use wildcard instead of exact path substitution, this is a M-A: same package.
-embedded-library usr/lib*/libnvidia-fatbinaryloader.so.#VERSION#: zlib
-
-# The libnvidia-fatbinaryloader.so.* SONAME changes with every upstream
-# release.
-# These private libraries are only used (and usable) as plugins
-# loaded by other NVIDIA libraries with the same upstream version
-# (and a stable SONAME).
-# Therefore we do not include the SONAME in this package name to
-# avoid going through NEW for every new upstream release.
-package-name-doesnt-match-sonames libnvidia-fatbinaryloader#VERSION#
-symbols-file-missing-build-depends-package-field
